--- a/public/template/assets/css/style.css
+++ b/public/template/assets/css/style.css
@@ -9,3 +9,54 @@ form .avatar{
     overflow: hidden;
 }
 
+.pub_image .container-avatar{
+    float: left;
+    margin-right: 15px;
+}
+
+.pub_image .data-user{
+    font-weight: bold;
+    line-height: 35px;
+}
+
+.pub_image .data-user a{
+    color: #444;
+}
+
+.image-container{
+    width: 100%;
+    max-height: 600px;
+    overflow: hidden;
+}
+
+.image-container img{
+    width: 100%;
+}
+
+.pub_image .card-body{
+    padding: 0px;
+}
+
+.pub_image .description{
+    padding: 20px;
+    padding-bottom: 0px;
+}
+
+.pub_image .btn-comments{
+    margin: 20px;
+    margin-top: 0px;
+    margin-left: 0px;
+}
+
+.likes {
+    float: left;
+    padding: 20px;
+    padding-bottom: 0px;
+    padding-top: 5px;
+    padding-right: 10px;
+}
+
+.likes img{
+    width: 20px;
+
+}
